src/app/chatbot/chatbot.component.css
/* Container de tous les éléments du chatbot */
.chatbot-container {
  display: flex;
  flex-direction: column;
  
  position: fixed;

  width: 400px;
  max-width: calc(100% - 2px);

  top: 120px;
  bottom: 60px;
  right: 15px;

  background-color: white;
  transform: translateX(125%);
  transition: opacity 0.3s, transform 0.3s;
  border: 1px solid black;
  border-radius: 20px 0px 0px 20px;
}
.chatbot-container.visible {
  opacity: 1;
  transform: translateX(0);
}


@media (max-width: 400px) {
  .chatbot-container {
    right: 0px;
  }
}

.chatbot-title{
  background: linear-gradient(to bottom, black, black, black, black, black, transparent);
  position: fixed;
  height: 40px;
  width: 100%;
  border-radius: 18px 0px 0px 0px;
  
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  color: white;
}

.chatbot-messages-container{
  overflow-y: auto;
  overflow-x: hidden;
  order: 1;
  flex-grow: 1;
  margin-left : 5px;
  margin-right : 5px;
  margin-bottom : 5px;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;

}

.chatbot-messages {
  display: flex;
  flex-direction: column-reverse;
}

.message {
  margin-top: 5px;
  padding: 2px 5px 2px 5px;
}
.user-message {
  border-radius: 15px 15px 15px 0 ;
  align-self: flex-start;
  background-color: #a1a1a1d5;
}
.chatbot-message {
  border-radius: 15px 15px 0 15px ;
  align-self: flex-end;
  background-color: #199ce2d5;
}




/* Container de la saisie de messages, se trouve à l'intérieur du chatbot-container */
.chatbot-input {
  display: flex;
  order: 2;
  height: 30px;
  opacity: 0;
  transform: translateX(100%);
  transition: opacity 0.3s, transform 0.3s;
}
.chatbot-input.visible {
  opacity: 1;
  transform: translateX(0);
}
.chatbot-input-send {
  background-image:url('../../assets/send.png');
  background-color: transparent;
  background-repeat: no-repeat;
  background-size: cover;
  width: 30px;
  height: 30px;
  border: 0px;
}
.chatbot-input-text {
  width: 100%;
  height: 27px;
  padding-left: 10px;
  border: 1px solid gray;
  border-radius: 0px 0px 0px 18px;
}




.chatbot-button {
  position: fixed;
  bottom: 15px;
  right: 15px;
  width: 45px;
  height: 45px;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: 1;
  background-color: rgba(0, 0, 0, 0);
  border: 1px;
  border-radius: 5px 0 5px 0;
  transition: transform 0.3s;
}
.chatbot-button:hover {
  transform: scale(1.2);
}
.chatbot-button-open {
  background-image:url('../../assets/chevron-down.png');
  rotate: 270deg;
}
.chatbot-button-closed {
  background-image:url('../../assets/chatbot.png');
}

@keyframes wiggle {
  0% {
    transform: rotate(-5deg);
  }
  50% {
    transform: rotate(5deg);
  }
  100% {
    transform: rotate(-5deg);
  }
}

.wiggle {
  animation: wiggle 1s ease-in-out infinite;
}

